# vdagent-gtk

./: ChangeLog  Makefile.am  README  configure.ac
data/: spice-vdagent.1.in
src/: Makefile.am
src/vdagent/: utils.c  utils.h  vdagent-clipboard.c  vdagent-clipboard.h  vdagent.c  vdagent.h
src/vdagentd/: udscs.c  vdagentd.c
